packages/deployment/templates/kubernetes-beta/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grepmind-beta
  labels:
    app.kubernetes.io/name: grepmind
    grepmind.zaytra.dev/deployment-context: beta
